--- a/tallerApp/templates/base/footer.html
+++ b/tallerApp/templates/base/footer.html
@@ -36,13 +36,12 @@
           class="btn btn-secondary dropdown-toggle"
           type="button"
           data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
+          aria-expanded="false">
           Moneda
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="">CLP</a></li>
-          <li><a class="dropdown-item" href="">USD</a></li>
+          <li><a class="dropdown-item" href="{% url 'moneda' 'CLP' %}">CLP</a></li>
+          <li><a class="dropdown-item" href="{% url 'moneda' 'USD' %}">USD</a></li>
         </ul>
       </div>
     </div>
