--- a/tallerApp/templates/pages/index.html
+++ b/tallerApp/templates/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
+    <title>ServiExpress</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/page.css' %}" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
